<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thinh.designfilter.DFilter">

    <!-- TODO: Update blank fragment layout -->

   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center|top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titlePulse"
                android:id="@+id/textView"
                android:layout_gravity="center"/>
            <TextView android:id="@+id/tvTitleChart"
                android:text="h[n]" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hightChart"
                android:orientation="vertical">
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleG"
                android:id="@+id/textView1"
                android:layout_gravity="center"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/chartAmplipute"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hightChart"
                android:orientation="vertical">
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleAmplipute"
                android:id="@+id/textView3"
                android:layout_gravity="center"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/chartPhase"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hightChart"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</FrameLayout>
